RESOLVED FIXED189482
Regression(PSON): "Swipe back" snapshot is missing when navigating back cross-process
https://bugs.webkit.org/show_bug.cgi?id=189482
Summary Regression(PSON): "Swipe back" snapshot is missing when navigating back cross...
Chris Dumez
Reported 2018-09-10 14:20:30 PDT
"Swipe back" snapshot is missing/blank when navigating back cross-process (due to process swap on navigation).
Attachments
Patch (5.47 KB, patch)
2018-09-11 10:00 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2018-09-10 14:21:25 PDT
Tim Horton
Comment 2 2018-09-10 14:29:58 PDT
This is actually /slightly/ surprising, because the UI process owns the snapshots. But I'm sure you'll have a patch in 5 minutes.
Chris Dumez
Comment 3 2018-09-10 16:25:50 PDT
A snapshot is taken and saved on the WebBackForwardListItem. However, it is blank. I believe it is likely the snapshot is taken too late after we've already reset some WebPageProxy state due to process swapping.
Chris Dumez
Comment 4 2018-09-10 16:27:24 PDT
0x7febfc84e418 - WebPageProxy::continueNavigationInNewProcess() 0x7febfc84e418 - WebPageProxy::reattachToWebProcess() 0x7febfc84e418 - WebPageProxy::takeViewSnapshot() We've already reattached the the new WebProcess at the time we take the snapshot.
Chris Dumez
Comment 5 2018-09-11 10:00:44 PDT
Geoffrey Garen
Comment 6 2018-09-11 10:14:28 PDT
Comment on attachment 349404 [details] Patch We know we need to fix the content disappearing / flashing problem before we enable PSON, so it's a little weird to do this as a stopgap in the meantime -- but I also think it's harmless, and nice to get one bug out of the list.
WebKit Commit Bot
Comment 7 2018-09-11 10:42:37 PDT
Comment on attachment 349404 [details] Patch Clearing flags on attachment: 349404 Committed r235898: <https://trac.webkit.org/changeset/235898>
WebKit Commit Bot
Comment 8 2018-09-11 10:42:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.